# model/model.go
@@ -5,19 +5,24 @@ import (
 	"time"
 )
 
+type Canteen struct {
+	CanteenName string `json:"canteen_name"`
+	Storey      uint8  `json:"storey"`
+}
+
 type BaseModel struct {
-	Id        uint32     `gorm:"primary_key;AUTO_INCREMENT;column:id" json:"-"`
-	CreatedAt time.Time  `gorm:"column:createdAt" json:"-"`
-	UpdatedAt time.Time  `gorm:"column:updatedAt" json:"-"`
-	DeletedAt *time.Time `gorm:"column:deletedAt" sql:"index" json:"-"`
+	Id        uint32     `gorm:"primary_key;AUTO_INCREMENT;column:id" json:"id"`
+	CreatedAt time.Time  `gorm:"column:created_at" json:"created_at"`
+	UpdatedAt time.Time  `gorm:"column:updated_at" json:"updated_at"`
+	DeletedAt *time.Time `gorm:"column:deleted_at" sql:"index" json:"deleted_at"`
 }
 
 type RestaurantModel struct {
 	BaseModel
-	Name         string `gorm:"column:name" json:"name"`
-	Location     uint8  `gorm:"column:location" json:"location"`
-	Introduction string `gorm:"column:introduction" json:"introduction"`
-	SalesVolumn  uint32 `gorm:"column:sales_volumn" json:"sales_volumn"`
+	Name         string  `gorm:"column:name" json:"name"`
+	Location     uint8   `gorm:"column:location" json:"location"`
+	Introduction string  `gorm:"column:introduction" json:"introduction"`
+	AveragePrice float64 `gorm:"column:average_price" json:"average_price"`
 }
 
 type FoodModel struct {
